# memex

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE.txt  README.md  build.bat  memex.h
docs/: _memory_i_o_8cpp.html  _memory_i_o_8cpp__incl.dot  _memory_i_o_8hpp.html  _memory_i_o_8hpp.js  _memory_i_o_8hpp__dep__incl.dot  _memory_i_o_8hpp__incl.dot  _memory_i_o_8hpp_source.html  _module_8cpp.html  _module_8cpp__incl.dot  _module_8hpp.html  _module_8hpp.js  _module_8hpp__dep__incl.dot  _module_8hpp__incl.dot  _module_8hpp_source.html  _process_handle_8cpp.html  _process_handle_8cpp__incl.dot  _process_handle_8hpp.html  _process_handle_8hpp.js  _process_handle_8hpp__dep__incl.dot  _process_handle_8hpp__incl.dot  _process_handle_8hpp_source.html  _remote_ptr_8hpp.html  _remote_ptr_8hpp.js  _remote_ptr_8hpp__dep__incl.dot  _remote_ptr_8hpp__incl.dot  _remote_ptr_8hpp_source.html  access__mask_8hpp.html  access__mask_8hpp.js  access__mask_8hpp__dep__incl.dot  access__mask_8hpp__incl.dot  access__mask_8hpp_source.html  annotated.html  annotated_dup.js  class_memory_i_o-members.html  class_memory_i_o.html  class_memory_i_o.js  class_memory_i_o_a116002480f37ec316c12b790626c2064_cgraph.dot  class_memory_i_o_a22bcfda2a3fcce2a9ea0f991b83c18d0_cgraph.dot  class_memory_i_o_a5573b0c20b58e9a6a70ccbb1fad5d4c9_cgraph.dot  class_memory_i_o_a56eada0fb67a750eba13cb44c108ab66_cgraph.dot  (+91 more)
docs/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+11 more)
include/memex/: MemoryIO.hpp  MemoryMap.hpp  MemoryRegion.hpp  Module.hpp  ModuleList.hpp  ProcessHandle.hpp  RemotePtr.hpp  access_mask.hpp  error.hpp  memex.hpp  (+2 more)
src/: MemoryIO.cpp  MemoryMap.cpp  MemoryRegion.cpp  Module.cpp  ModuleList.cpp  ProcessHandle.cpp  memex.cpp  pch.hpp  utility.cpp
